<resources>
    <string name="app_name">Khel</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="settings">Settings</string>
    <string name="my_team">My Team</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="comingsoon">Coming Soon :)</string>
    <string name="homee">home</string>
    <string name="my_team_ynwa">my team YNWA</string>
    <string name="dick">dick</string>
    <string name="explore_frag_button1">Explore Tournaments</string>
    <string name="explore_frag_button2">Challenge Other Teams </string>
    <string name="explore_frag_button3">Looking to Play</string>
    <string name="explore_frag_button4"><![CDATA[Futsal Info & Bookings]]></string>
    <string name="explore_frag_button5">Virtual League</string>
    <string name="tournament_fragment_value">Explore Tournaments</string>
    <string name="create_tournament_button_value">Create Tournament</string>
    <string name="home_page_heading_value">What\'s Hot</string>
    <string name="form_title_value">Create Tournament</string>
    <string name="ct_entertname">Tournament Name</string>
    <string name="ct_enterphone">Contact Number</string>
    <string name="ct_frag_locationval">Location/Venue</string>
    <string name="ct_frag_awards"><![CDATA[Awards & Prizes]]></string>
    <string name="ctfrag_rd"><![CDATA[Rules & Description]]></string>
    <string name="ctfrag_add">Additional Info</string>
    <string name="formfrag_date_value">Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frag_td_title">Tournament Details</string>
    <string name="about_button_value">About Khel</string>
    <string name="version_value">Version: 2.4.1</string>
    <string name="credits_title">Credits</string>
    <string name="credits_value">Shovan Shakya</string>
    <string name="credits_value2">Soren Basnet</string>
    <string name="credits_value3">Sayaka Shakya (Artworks)</string>
    <string name="settings_contact">If there is some mistake in your tournament listing, please contact</string>
    <string name="contact_email_value">romppapp@gmail.com</string>
    <string name="credits4_value">Nistha Rajbhandari (Research)</string>
    <string name="desttitle">Description</string>
    <string name="rulestitle">Rules</string>
    <string name="awardtitle">Awards</string>
    <string name="conctitle">Contact</string>
    <string name="tournament_add_success">Added Successfully</string>
    <string name="booking_title"><![CDATA[Futsal Info & Bookings]]></string>
    <string name="test_booking_name">Alu Palu Futsal</string>
    <string name="test_booking_timing">6 - 7</string>
    <string name="test_bookings_timing2">7 - 8</string>
    <string name="venue_name"><![CDATA[Venue Details & Bookings]]></string>
    <string name="six">6:00-7:00</string>
    <string name="seven">7:00-8:00</string>
    <string name="eight">8:00-9:00</string>
    <string name="nine">9:00-10:00</string>
    <string name="ten">10:00-11:00</string>
    <string name="eleven">11:00-12:00</string>
    <string name="twelve">12:00-13:00</string>
    <string name="thirteen">13:00-14:00</string>
    <string name="fourteen">14:00-15:00</string>
    <string name="fifteen">15:00-16:00</string>
    <string name="sixteen">16:00-17:00</string>
    <string name="seventeen">17:00-18:00</string>
    <string name="eighteen">18:00-19:00</string>
    <string name="logout">Log Out</string>
    <string name="signoutbutton">Sign Out</string>
    <string name="hello">Hello</string>
    <string name="signup_login_text">Sign Up/Login</string>
    <string name="LTP_title">Looking to Play</string>
    <string name="myaccount_button">My Account</string>
    <string name="aboutbutton_text">About Khel</string>
    <string name="stealthedeal">Steal the Deal!</string>
    <string name="ltp_create_text">Play With Others</string>
    <string name="khel">Khel</string>
    <string name="futsal_venue">Futsal Venue</string>
    <string name="futsal_location">Venue Location</string>
    <string name="LTP_starttime">Start Time</string>
    <string name="LTP_endtime">End Time</string>
    <string name="LTP_Date">Date</string>
    <string name="LTP_Contact">Other Ways To Contact</string>
    <string name="ltpform_totalplayers">Total Number of Players</string>
    <string name="ltpform_joinednumberplayers">Number of Players Joined So Far</string>
    <string name="locationhint">Dhapakhel</string>
    <string name="LTP_pricepp">Price Per Person</string>
    <string name="LTP_pricepp_hint">E.g: 200</string>
    <string name="LTP_addinfo_hint">E.g: Wear White or Black jersey.</string>
    <string name="track">Track</string>
    <string name="mycreatedLTPs">My Created Looking to Play</string>
    <string name="mycreatedLTPdetails_urgae">Change the number of players who joined.</string>
    <string name="ltd_details_title">Room Details</string>
    <string name="ltpdetails_price">Price Per Player:</string>
    <string name="ltpdetails_playercount">Player Count:</string>
    <string name="dash">/</string>
    <string name="ltpdetails_contact">How to Contact</string>
    <string name="underdev">THIS APP IS UNDER DEVELOPMENT.SOME INFORMATION MAY NOT BE ACCURATE</string>
    <string name="deleteroom">End This Room</string>
    <string name="selectdate">Select Date</string>
    <string name="selectroom">Select Room</string>
    <string name="aderat">\@</string>
    <string name="select_venue">Select Venue</string>
    <string name="test">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="test2">Futsals Finally Reopen!</string>
    <string name="myteam_rooms">My Team and Rooms</string>
    <string name="whatsapp">Message Via Whatsapp</string>
    <string name="see_full_article">See Full Article</string>
    <string name="phone_number">Phone Number ( Preferrably with Whatsapp)</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>
    <string name="player5">Player 5</string>
    <string name="player6">Player 6</string>
    <string name="player7">Player 7</string>
    <string name="defaultteamname">Team Name</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="availabletimings">Available Timings</string>
    <string name="numba1">#1</string>
    <string name="numba2">#2</string>
    <string name="numba3">#3</string>
    <string name="numba4">#4</string>
    <string name="numba5">#5</string>
    <string name="numba6">#6</string>
    <string name="numba7">#7</string>
    <string name="create_team">Create Team</string>
    <string name="team_name">Team Name</string>
    <string name="send_invite">Send Invite</string>
    <string name="example_email">example@gmail.com</string>
    <string name="submit">Submit</string>
    <string name="join_team">Join Team</string>
    <string name="my_invitations">My Invitations</string>
    <string name="dontjoin">Dont Join</string>
    <string name="team_members">Team Members</string>
    <string name="leave_team">Leave Team</string>
    <string name="challenge_teams">Challenge Other Teams</string>
    <string name="call_phone">Call Mobile Number</string>
    <string name="my_room">My Room</string>
    <string name="Invitations">Pending Invitations</string>
    <string name="Challenges">Challenges</string>
    <string name="Challengesnum">Challenges (0)</string>
    <string name="matching_op">Matching Opponents</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="challenge">Challenge</string>
    <string name="default_challenge_memo">We are looking to play a good and friendly game!</string>
    <string name="W">W</string>
    <string name="L">L</string>
    <string name="D">D</string>
    <string name="challenge_team">Challenge Details</string>
    <string name="VS">VS</string>
    <string name="winnerpays">Winner Pays : </string>
    <string name="account_info">Account Information</string>
    <string name="display_name">Display Name :</string>
    <string name="account_info_email">Email :</string>
    <string name="Start_time">Start Time</string>
    <string name="select_district">Select District</string>
    <string name="shortmessage">Short Message/Additional Information</string>
    <string name="appeal">Appeal</string>
    <string name="Accept">Accept</string>
    <string name="Reject">Reject</string>
    <string name="challenges_against_myteam">Challenges Against My Team</string>
    <string name="accepted_challenges">Accepted Challenges</string>
    <string name="challenges_from">Challenges From My Team</string>
    <string name="venueinfo">Venue Information</string>
    <string name="scrollright">Scroll Right</string>
    <string name="searchHint">Enter futsal venue name</string>
    <string name="sortbylocation">Sort By Location</string>
</resources>