<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context=".Fragments.FormFragment_LTP">

    <TextView
        android:id="@+id/ltpform_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/cafe_francoise"
        android:text="@string/ltp_create_text"
        android:textColor="#F15DC8"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/tournament_holder_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ltpform_title"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ltpform_venue"
                style="@style/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/futsal_venue"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/ltpform_selectvenuebutton"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_venue"
                android:textColor="#DCA555"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_venue" />

            <TextView
                android:id="@+id/ltpform_editvenue"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:textColorHint="#DCA555"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_selectvenuebutton"
                tools:text="UN Park Futsal" />

            <TextView
                android:id="@+id/ltpform_location"
                style="@style/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/futsal_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_editvenue" />

            <TextView
                android:id="@+id/ltpform_editlocation"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColorHint="#DCA555"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_location"
                tools:text="@string/locationhint" />

            <TextView
                android:id="@+id/ltpform_time"
                style="@style/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LTP_starttime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_editlocation" />

            <TimePicker
                android:id="@+id/ltpform_timepicker"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="#212121"
                android:theme="@style/MyDatePicker"
                android:timePickerMode="spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_time" />

            <TextView
                android:id="@+id/ltpform_edittime"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_timepicker"
                tools:text="8:00" />

            <TextView
                android:id="@+id/ltpform_endtime"
                style="@style/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LTP_endtime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_edittime" />

            <TimePicker
                android:id="@+id/ltpform_endtimepicker"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="#212121"
                android:theme="@style/MyDatePicker"
                android:timePickerMode="spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_endtime" />

            <TextView
                android:id="@+id/ltpform_editendtime"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_endtimepicker"
                tools:text="5:00" />

            <TextView
                android:id="@+id/ltpform_date"
                style="@style/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LTP_Date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_editendtime" />

            <DatePicker
                android:id="@+id/ltpform_datepicker"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="#212121"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:fontFamily="sans-serif-thin"
                android:textColor="#DC9835"
                android:textColorHint="#DC9835"
                android:theme="@style/MyDatePicker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_date" />

            <TextView
                android:id="@+id/ltpform_editdate"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_datepicker"
                tools:text="12/12/2002" />

            <TextView
                android:id="@+id/ltpform_phonenumber"
                style="@style/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/phone_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_editdate" />

            <EditText
                android:id="@+id/ltpform_editPhone"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="9841111111"
                android:inputType="phone"
                android:textColorHint="#DCA555"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_phonenumber" />

            <TextView
                android:id="@+id/ltpform_contact"
                style="@style/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LTP_Contact"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_editPhone" />

            <EditText
                android:id="@+id/ltpform_editcontact"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="Example: Phone Number, Social Media account, etc"
                android:inputType="textMultiLine"
                android:textColor="#DC9835"
                android:textColorHint="#DCA555"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_contact" />

            <TextView
                android:id="@+id/ltpform_totalplayers"
                style="@style/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ltpform_totalplayers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_editcontact" />

            <EditText
                android:id="@+id/ltpform_edittotalplayers"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="For Eg: 10"
                android:inputType="number"
                android:textColorHint="#DCA555"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_totalplayers" />

            <TextView
                android:id="@+id/ltpform_joinedplayers"
                style="@style/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ltpform_joinednumberplayers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_edittotalplayers" />

            <EditText
                android:id="@+id/ltpform_editjoinedplayers"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="For Eg: 4"
                android:inputType="number"
                android:textColorHint="#DCA555"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_joinedplayers" />

            <TextView
                android:id="@+id/ltpform_pricepp"
                style="@style/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LTP_pricepp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_editjoinedplayers" />

            <EditText
                android:id="@+id/ltpform_editpricepp"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/LTP_pricepp_hint"
                android:inputType="number"
                android:textColorHint="#DCA555"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_pricepp" />

            <TextView
                android:id="@+id/ltpform_addinfo"
                style="@style/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ctfrag_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_editpricepp" />

            <EditText
                android:id="@+id/ltpform_editaddinfo"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center|top"
                android:hint="@string/LTP_addinfo_hint"
                android:inputType="textMultiLine"
                android:textColorHint="#DCA555"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_addinfo" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#3647A5"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="Submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ltpform_editaddinfo" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>